--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.config.import=optional:configserver:http://localhost:8888
 server.port=8090
+
+limits-service.minimum=2
+limits-service.maximum=99
