--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>limits_microservice</artifactId>
+    <groupId>com.microservice</groupId>
+    <artifactId>limits_service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>limits_microservice</name>
     <description>limits_microservice</description>
